Test runner, better class loading, removed deprecated code